tests/samples/negative/functions/unsafe_fn_pointer_call_required.ax
module unsafe_fn_pointer_call_required;

type UnsafeRead = unsafe fn(*const i32) -> i32;

fn as_const_ptr(value: &i32) -> *const i32 {
    return unsafe { ptrat<*const i32>(ptraddr(value)) };
}

unsafe fn read_raw(value: *const i32) -> i32 {
    return *value;
}

fn main() -> i32 {
    var value: i32 = 1;
    let reader: UnsafeRead = read_raw;
    return reader(as_const_ptr(&value));
}
